<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="training_one">eCommerce</string>
    <string name="training_two">Rails 4</string>
    <string name="training_three">Dynamics AX</string>
    <string name="training_four">Android</string>
    <string name="training_five">Git</string>
    <string name="training_six">Python</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="search_KLOUD">Search KLOUD</string>
    <string name="keeping_you_awake">What\'s keeping you awake?</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="registered_user">madan</string>
    <string name="secret">password</string>
    <string name="incorrect_login">Username or password is incorrect.</string>
    <string name="incorrect_login_title">Login Error</string>
    <string name="okay">Ok</string>
    <string name="module_title">New MDC Modules</string>
    <string name="action_about">About</string>
    <string name="about_title">Learning</string>
    <string name="about_message">This android application is simply a proof of concept. Some functionality may not work as intended. All images are merely placeholders. This app is best viewed on a Nexus 4 or a device with similar screen size running Android 4.0.3 or later.
    </string>
    <string name="view_by_theme">View by Theme</string>
    <string name="title_activity_training_detail">Learning</string>
    <string name="about_this_training">About This Training</string>
    <string name="learning_objectives">Learning Objectives</string>
    <string name="learning_objective_one">Duis aute irure dolor in reprehenderit in dolore eu fugiat nulla pariatur.</string>
    <string name="learning_objective_two">Excepteur sint occaecat cupidatat non proident.</string>
    <string name="learning_objective_three">Sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="logout">Logout</string>
    <string name="logged_out">Logout successful</string>
    <string name="geek_o_meter">Geek O\' Meter</string>
    <string name="geek_health_percent">78% Healthy</string>
    <string name="geek_health_points">287 Points</string>
    <string name="did_you_know">Did You Know?</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod et dolore magna aliqua.</string>
    <string name="lorem_ipsum_did_you_know">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="you_might_like">You might Also Like...</string>
    <string name="overall_rating_title">Overall Rating</string>
    <string name="my_rating">Sign In to rate</string>
    <string name="signed_in_my_rating_title">My Rating</string>
    <string name="not_yet_rated">Not yet rated. Click to rate!</string>
    <string name="rating_not_functional">This feature has not yet been implemented in this proof of concept.</string>
    <string name="sign_in_not_functional">Signing in from the training detail screen has not been implemented in this proof of concept.</string>
    <string name="register">Register</string>
    <string name="register_button_title">Register</string>
    <string name="register_not_functional">A real app would actually let you register, however this is just a proof of concept and this feature has not been implemented :(</string>
    <string name="search_keyboard">Search</string>

</resources>
