<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.madan.training.TrainingDetail$PlaceholderFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/about_training_block"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_this_training"
            android:textSize="@dimen/default_title_size"
            android:paddingBottom="@dimen/training_padding"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/lorem_ipsum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/banner_padding"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@+id/about_training_block"
        >

             <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                 <TextView
                     android:id="@+id/learning_objectives_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/training_padding"
                     android:text="@string/learning_objectives"
                     android:paddingBottom="@dimen/banner_padding"
                     android:textStyle="bold"/>
                 <ListView
                     android:id="@+id/learning_objectives_list"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/learning__objective_height"
                     >

                 </ListView>

            </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:paddingLeft="@dimen/training_padding"
                android:id="@+id/overall_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/training_padding"
                android:text="@string/overall_rating_title"
                android:paddingBottom="@dimen/banner_padding"
                android:textStyle="bold"/>

            <RatingBar
                android:layout_marginLeft="@dimen/training_padding"
                android:id="@+id/overall_rating"
                style="@style/CustomRatingBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:progressDrawable="@drawable/rating_star_gold"
                android:numStars="5"
                />

            <TextView
                android:paddingLeft="@dimen/training_padding"
                android:id="@+id/my_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/training_padding"
                android:text="@string/my_rating"
                android:paddingBottom="@dimen/banner_padding"
                android:textStyle="bold"
                android:clickable="true"/>

            <RatingBar
                android:layout_marginLeft="@dimen/training_padding"
                android:id="@+id/my_rating"
                style="@style/CustomRatingBar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:progressDrawable="@drawable/rating_star_gold"
                android:numStars="5"
                android:visibility="invisible"
                android:clickable="true"
                />

            </LinearLayout>

     </LinearLayout>

</RelativeLayout>
