<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TrainingMainActivity$PlaceholderFragment">
    <EditText android:id="@+id/inputSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_search"
        android:hint="@string/search_KLOUD"
        android:inputType="textVisiblePassword"/>
    <TextView
        android:id="@+id/sign_in"
        android:clickable="true"
        android:layout_below="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_button_height"
        android:text="@string/sign_in"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/right_arrow"
        />

    <HorizontalScrollView
        android:id="@+id/carousel"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-15dp"
        android:overScrollMode="never"
        android:scrollbars="horizontal"
        android:scrollbarStyle="insideInset"
        android:layout_below="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_carousel">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/training_one"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="-1dp"
                android:clickable="true">

                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_one"
                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="30dp"
                    android:textAlignment="gravity"
                    android:text="@string/training_one"
                    android:textSize="15dp"
                    android:textStyle="bold|italic"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/training_two"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true">

                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_two"

                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="20dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="gravity"
                    android:text="@string/training_two"
                    android:textSize="30dp"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/training_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true">
                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_three"
                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="30dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="gravity"
                    android:text="@string/training_three"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/training_four">

                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_four"
                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="30dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="gravity"
                    android:text="@string/training_four"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"

                    />




                </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/training_five">
                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_five"
                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="30dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="gravity"
                    android:text="@string/training_five"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"

                    />

                </RelativeLayout>
            <RelativeLayout
                android:id="@+id/training_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true">

                <ImageView android:layout_width="@dimen/training_width"
                    android:layout_height="@dimen/training_height"
                    android:scaleType="fitXY"
                    android:src="@drawable/learn_six"
                    android:paddingTop="@dimen/training_padding"
                    android:paddingBottom="@dimen/training_padding"
                    android:paddingRight="@dimen/training_padding"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="30dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="gravity"
                    android:text="@string/training_six"
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:textColor="@android:color/white"

                    />


                </RelativeLayout>


           </LinearLayout>

    </HorizontalScrollView>
</RelativeLayout>
